update button wrapper

--- a/svc/hecate/src/common/components/button-wrapper/styles.module.scss
+++ b/svc/hecate/src/common/components/button-wrapper/styles.module.scss
@@ -25,3 +25,9 @@
     color: #e0ffff; // A lighter shade for contrast
   }
 }
+
+.echoButtonImg {
+  width: 100px; // Set your desired width
+  height: 100px; // Set your desired height
+  object-fit: contain; // This ensures the image is scaled correctly within the dimensions
+}
