--- a/svc/hecate/src/common/components/app-menu/styles.module.scss
+++ b/svc/hecate/src/common/components/app-menu/styles.module.scss
@@ -1,17 +1,60 @@
 .menuContainer {
-  position: absolute;
-  bottom: calc(100% + 10px); /* Position the menu above the button with some spacing */
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background color */
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Add shadow effect */
-  padding: 10px;
-  z-index: 100;
   display: none; /* Initially hide the menu */
 }
 
+
 .menuContainer.active {
-  display: block; /* Show the menu when active */
+  display: flex; /* Use flexbox */
+  flex-direction: row-reverse; /* Reverse order to increment upwards */
+  position: absolute; /* Position absolutely */
+  bottom: calc(100% + 15px); /* Adjusted */
+  background: linear-gradient(to right, rgba(65, 105, 225, 0.5), rgba(25, 25, 112, 0.35));
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  padding: 2px;
+  z-index: 100;
+  max-width: 605px; /* Set a max-width */
+  gap: 30px; /* Space between items */
+  left: 0;
+}
+
+.appButton {
+  background: linear-gradient(to left, rgba(100, 149, 237, 0.5), rgba(25, 25, 112, 0.5));
+  border-radius: 5px;
+  box-shadow:
+    0 2px 4px rgba(0, 0, 0, 0.2),
+    inset 0 -4px 2px rgba(0, 0, 0, 0.2);
+  color: white;
+  cursor: pointer;
+  display: block; // Adjust as needed
+  padding: 20px;
+  text-align: center; // Center the text if the buttons are block elements
+  transition: all 0.3s ease;
+
+
+  &:hover,
+  &:focus {
+    background: linear-gradient(to right, rgba(65, 105, 225, 0.7), rgba(25, 25, 112, 0.7));
+    box-shadow:
+      0 4px 8px rgba(0, 0, 0, 0.3),
+      inset 0 -6px 3px rgba(0, 0, 0, 0.3);
+    color: #e0ffff; // A lighter shade for contrast
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 0; // Adjust padding for small/mobile screens
+  }
+}
+
+.appButton img {
+  width: 75%; // Set your desired width
+  height: auto; // Set your desired height
+  // object-fit: contain; // This ensures the image is scaled correctly within the dimensions
+
+  @media screen and (max-width: 768px) {
+    width: 50px; // Adjust width for small/mobile screens
+    height: 50px; // Adjust height for small/mobile screens
+  }
 }
 
 .appButton:hover img {
