--- a/svc/hecate/src/common/components/index-button-wrapper/styles.module.scss
+++ b/svc/hecate/src/common/components/index-button-wrapper/styles.module.scss
@@ -46,15 +46,34 @@
   .indexButton, .indexButton2 {
     padding: 8px 16px;
     font-size: 14px;
-    margin: 0 3px;
+    // margin: 0 3px;
   }
 
   .echoButtonImg {
-    width: 50px;
+    width: 25px;
   }
 
   .buttonsContainer {
     gap: 2%;
+    top: 70%;
   }
 }
+ /* Media query for mobile landscape screens */
+@media screen and (max-width: 1024px) and (orientation: landscape) {
+  .indexButton, .indexButton2 {
+    // padding: 8px 16px;
+    font-size: 14px;
+    // margin: 0 3px;
+  }
+
+  .echoButtonImg {
+    width: 30px;
+  }
+
+  .buttonsContainer {
+    gap: 2%;
+    top: 85%;
+  }
+}
+
 
