--- a/svc/hecate/src/common/components/echo/styles.module.scss
+++ b/svc/hecate/src/common/components/echo/styles.module.scss
@@ -44,17 +44,14 @@ $base-font-size: 18px;
 
 /* Base Echo Screen styles with darker blue theme */
 .parentContainer {
-  height: 100vh;
-  padding-left: 2.5%;
-  padding-top: 2.5%;
+  padding: 2.5%;
+  padding-top: 1%;
   width: 65%;
-  // display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 .sidebar {
-  padding-right: 20px;
+  padding-right: 5%;
   width: 10%;
   overflow-y: auto;
 }
@@ -62,13 +59,11 @@ $base-font-size: 18px;
 .mainScreenContent {
   animation: flickerGlow 2s infinite ease-in-out, moveGradient 10s ease infinite, backgroundFade 6s ease infinite;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(48, 25, 52, 0.6), rgba(25, 25, 112, 0.4));
-  background-size: 200% 200%;
   border-radius: 10px;
   box-shadow: 0 0 8px rgba(100, 149, 237, 0.3), 0 0 20px rgba(100, 149, 237, 0.3);
   display: flex;
   flex-direction: row;
   padding: 20px;
-  width: 100%;
   overflow: hidden;
 }
 
@@ -78,12 +73,10 @@ $base-font-size: 18px;
   box-shadow: 0 0 8px rgba(100, 149, 237, 0.3), 0 0 20px rgba(100, 149, 237, 0.3);
   color: #ffffff;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  max-height: 80vh; /* Set maximum height to 80% of viewport height */
+  max-height: 75vh; /* Set maximum height to 80% of viewport height */
 }
 
 .echoTitle,
