--- a/svc/hecate/src/common/components/app-menu/styles.module.scss
+++ b/svc/hecate/src/common/components/app-menu/styles.module.scss
@@ -157,3 +157,14 @@ body {
   }
 }
 
+@media screen and (max-width: 768px) and (orientation: landscape) {
+  .appMenu {
+    width: 100%;
+    padding: 5px;
+  }
+  .appButton {
+    min-width: 30px; /* Adjust for better touch targets */
+    // padding: 12px;
+    // min-height: 60 /px; /* Ensures buttons are not too small */
+  }
+}
