--- a/svc/hecate/src/common/components/echo/styles.module.scss
+++ b/svc/hecate/src/common/components/echo/styles.module.scss
@@ -87,6 +87,7 @@ $base-font-size: 18px;
   white-space: normal;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  padding: 10px;
 }
 
 .echoImage,
@@ -121,7 +122,7 @@ $base-font-size: 18px;
   .echoScreen {
     z-index: 10; /* Ensure it's above other content but adjust according to your layout */
     padding: 10px; /* Reduced padding for the Echo screen */
-    max-height: 70vh; /* Limit the height to 70% of the viewport height */
+    max-height: 65vh; /* Limit the height to 70% of the viewport height */
     overflow-y: auto; /* Enable vertical scrolling for overflow content */
   }
 
