--- a/svc/hecate/src/common/components/app-menu/app-menu.module.scss
+++ b/svc/hecate/src/common/components/app-menu/app-menu.module.scss
@@ -12,7 +12,6 @@ $background-gradient-end: rgba(255, 194, 113, 0.3);
 .appMenu {
   display: flex;
   flex-direction: row;
-  // justify-content: center;
   background: linear-gradient(to left, $background-gradient-start, $background-gradient-middle, $background-gradient-end);
   animation: moveGradient 10s ease infinite, flickerGlow 2s infinite ease-in-out;
   border-radius: 10px;
@@ -22,7 +21,6 @@ $background-gradient-end: rgba(255, 194, 113, 0.3);
   gap: 15px;
   font-family: $comic-font;
   color: white;
-  // width: calc(100% - 175px); /* Adjust width as needed */
 }
 
 
@@ -75,7 +73,6 @@ body {
   display: none;
 }
 
-/* Menu Container Active State with Black Gradient */
 .menuContainer.active {
   display: flex;
   flex-direction: row-reverse;
@@ -134,24 +131,17 @@ body {
 
 @media screen and (max-width: 768px) and (orientation: portrait) {
   .appMenu {
-    width: 100%;
     padding: 5px;
   }
-  .appButton {
-    min-width: 30px; /* Adjust for better touch targets */
-    padding: 12px;
-    // min-height: 60 /px; /* Ensures buttons are not too small */
-  }
+
 }
 
 @media screen and (max-width: 768px) and (orientation: landscape) {
   .appMenu {
-    width: 100%;
-    padding: 5px;
+    // width: 100%;
+    // padding: 5px;
   }
-  .appButton {
-    min-width: 30px; /* Adjust for better touch targets */
-    // padding: 12px;
-    // min-height: 60 /px; /* Ensures buttons are not too small */
-  }
+
 }
+
+
