--- a/svc/hecate/src/common/components/chat-input/chat-input.module.scss
+++ b/svc/hecate/src/common/components/chat-input/chat-input.module.scss
@@ -3,7 +3,6 @@
 /* Define font styles */
 $comic-font: 'Comic Sans MS', sans-serif;
 $floating-color: rgba(100, 149, 237, 0.7);
-
 /* Animation Keyframes */
 @keyframes flickerGlow {
   0%, 100% {
@@ -27,7 +26,7 @@ $floating-color: rgba(100, 149, 237, 0.7);
   }
   to {
     opacity: 0;
-    bottom: 400px;
+    bottom: 700px;
   }
 }
 
@@ -60,25 +59,18 @@ $floating-color: rgba(100, 149, 237, 0.7);
   position: fixed;
   bottom: 60px;
   left: 20px;
-  padding: 5px 10px;
-  background-color: $floating-color;
+  padding: 15px 30px;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(48, 25, 52, 0.6), rgba(255, 194, 113, 0.3));
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), 0 0 10px $floating-color;
   color: white;
-  border-radius: 5px;
+  border-radius: 15px;
   font-family: $comic-font;
   animation: moveUp 3s ease-in-out forwards;
 }
 
 /* Responsive adjustments for mobile screens */
 @media (max-width: 768px) {
-  .chatInputContainer {
-    width: calc(100% - 80px);
-    // bottom: 0%;
-    // left: 2.5 %;
-    // padding: 8px;
-  }
-
   .chatInput {
-    width: calc(100% - 16px);
     padding: 8px;
     font-size: 14px;
   }
@@ -91,7 +83,6 @@ $floating-color: rgba(100, 149, 237, 0.7);
 /* Additional considerations for landscape mode */
 @media (max-width: 768px) and (orientation: landscape) {
   .chatInputContainer {
-    width: calc(100% - 90px);
     padding: 8px;
   }
 }
